@@ -2,6 +2,7 @@ Revision history for Getopt-Long
 
 {{$NEXT}}
     - Add support for Real parameters
+    - Add getopt sub trait
 
 0.1.0  2019-02-03T01:43:46+01:00
     - Eliminate Capture in pair syntax
